--- a/progressbar/burst/files/style.css
+++ b/progressbar/burst/files/style.css
@@ -121,7 +121,7 @@ a {
   padding: 0;
   font-weight: 400;
 }
-@-webkit-keyframes gradient_bkgd {
+@-webkit-keyframes burst_gradient {
   0% {
     background-position: 50% 50%, 0;
   }
@@ -129,7 +129,7 @@ a {
     background-position: -100% 50%, 0;
   }
 }
-@-moz-keyframes gradient_bkgd {
+@-moz-keyframes burst_gradient {
   0% {
     background-position: 50% 50%, 0;
   }
@@ -137,7 +137,7 @@ a {
     background-position: -100% 50%, 0;
   }
 }
-@keyframes gradient_bkgd {
+@keyframes burst_gradient {
   0% {
     background-position: 50% 50%, 0;
   }
@@ -161,17 +161,12 @@ a {
 }
 
 .progressbar .progress.updated {
-  background-image: linear-gradient(
-      90deg,
-      rgba(63, 133, 255, 0) 0%,
-      #41bcff 20%,
-      rgba(63, 133, 255, 0) 23%
-    ),
+  background-image: linear-gradient(90deg, rgba(63, 133, 255, 0) 0%, #41bcff 20%, rgba(63, 133, 255, 0) 23%),
     linear-gradient(90deg, #3f87ff 0%, #764bff 50%, #764bff 100%);
   background-size: 200% 100%, cover;
-  -webkit-animation: gradient_bkgd 2s ease-out 3 forwards;
-  -moz-animation: gradient_bkgd 2s ease-out 3 forwards;
-  animation: gradient_bkgd 2s ease-out 3 forwards;
+  -webkit-animation: burst_gradient 2s ease-out 3 forwards;
+  -moz-animation: burst_gradient 2s ease-out 3 forwards;
+  animation: burst_gradient 2s ease-out 3 forwards;
 }
 .progressbar .progress .runner,
 .progressbar .progress .runner.paused {
