--- a/progressbar/burst/relevantcode.css
+++ b/progressbar/burst/relevantcode.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes gradient_bkgd {
+@-webkit-keyframes burst {
   0% {
     background-position: 50% 50%;
   }
@@ -6,7 +6,7 @@
     background-position: -100% 50%;
   }
 }
-@-moz-keyframes gradient_bkgd {
+@-moz-keyframes burst {
   0% {
     background-position: 50% 50%;
   }
@@ -14,7 +14,7 @@
     background-position: -100% 50%;
   }
 }
-@keyframes gradient_bkgd {
+@keyframes burst {
   0% {
     background-position: 50% 50%;
   }
@@ -36,9 +36,9 @@
 }
 
 .progressbar .progress.updated {
-  background-image: linear-gradient(90deg, #317890 0%, #86dbd8 20%, #317890 22%);
+  background-image: linear-gradient(90deg, rgba(63, 133, 255, 0) 0%, #41bcff 20%, rgba(63, 133, 255, 0) 23%);
   background-size: 200% 100%;
-  -webkit-animation: gradient_bkgd 2s ease-out 3 forwards;
-  -moz-animation: gradient_bkgd 2s ease-out 3 forwards;
-  animation: gradient_bkgd 2s ease-out 3 forwards;
+  -webkit-animation: burst 2s ease-out 3 forwards;
+  -moz-animation: burst 2s ease-out 3 forwards;
+  animation: burst 2s ease-out 3 forwards;
 }
