--- a/progressbar/diagonal apple progressbar/files/style.css
+++ b/progressbar/diagonal apple progressbar/files/style.css
@@ -121,7 +121,7 @@ a {
   padding: 0;
   font-weight: 400;
 }
-@-webkit-keyframes gradient_bkgd {
+@-webkit-keyframes diagonal {
   from {
     background-position: 0px;
   }
@@ -129,7 +129,7 @@ a {
     background-position: 50px;
   }
 }
-@-moz-keyframes gradient_bkgd {
+@-moz-keyframes diagonal {
   from {
     background-position: 0px;
   }
@@ -137,7 +137,7 @@ a {
     background-position: 50px;
   }
 }
-@keyframes gradient_bkgd {
+@keyframes diagonal {
   from {
     background-position: 0px;
   }
@@ -154,21 +154,15 @@ a {
 .progressbar .progress.updated {
   background-color: black;
 
-  background-image: linear-gradient(
-    130deg,
-    blue 19px,
-    orange 20px,
-    orange 38px,
-    blue 39px
-  );
+  background-image: linear-gradient(130deg, blue 19px, orange 20px, orange 38px, blue 39px);
 
   background-size: 50px;
 }
 
 .progressbar .progress.updated {
-  -webkit-animation: gradient_bkgd 1s linear infinite !important;
-  -moz-animation: gradient_bkgd 1s linear infinite !important;
-  animation: gradient_bkgd 1s linear infinite !important;
+  -webkit-animation: diagonal 1s linear infinite !important;
+  -moz-animation: diagonal 1s linear infinite !important;
+  animation: diagonal 1s linear infinite !important;
 }
 
 /* .progressbar .progress .runner {
