--- a/progressbar/radial/files/style.css
+++ b/progressbar/radial/files/style.css
@@ -127,6 +127,10 @@ a {
 }
 
 /* #### radial progressbar start #### */
+/* to change the size of the radial progressbar, change all of the --circle-size variable accordingly */
+:root {
+  --circle-size: 200px;
+}
 .progressbar {
   /*background-color: #581e00;
   border-color: #581e00;*/
@@ -139,19 +143,13 @@ a {
 .progressbar .progress.updated {
   background-image: url(progress2-1-black.gif);
 }
-/* .progressbar .progress .runner {
-      background-image: url(player_b_right_walk1-0.2.gif);
-    }
-
-    .progressbar .progress .runner.paused{
-      background-image: url(./person_pause_b.png);
-    } */
-
-/* to change the size of the radial progressbar, change all of the @circle-size accordingly */
-
+#MainPart_divProgressbar_Progress_Runner,
+#MainPart_divProgressbar_Progress_Runner.paused {
+  /* background-image: none; */
+}
 .radial-progressbar {
-  height: 200px; /*@circle-size */
-  width: 200px; /*@circle-size */
+  height: var(--circle-size); /*@circle-size */
+  width: var(--circle-size); /*@circle-size */
   margin: 5px auto;
   border-radius: 50%;
 }
@@ -159,8 +157,8 @@ a {
 .circle .mask,
 .circle .fill,
 .circle .shadow {
-  height: 200px; /*@circle-size */
-  width: 200px; /*@circle-size */
+  height: var(--circle-size); /*@circle-size */
+  width: var(--circle-size); /*@circle-size */
   border-radius: 50%;
   position: absolute;
 }
@@ -176,37 +174,37 @@ a {
   border-radius: 50%;
 }
 .circle .mask {
-  clip: rect(0px, 200px, 200px, 100px); /*clip: rect(0px, @circle-size, @circle-size, @circle-size/2); */
+  clip: rect(0px, var(--circle-size), var(--circle-size), calc(var(--circle-size) / 2)); /*clip: rect(0px, @circle-size, @circle-size, @circle-size/2); */
 }
 .circle .mask .fill {
-  clip: rect(0px, 100px, 200px, 0px); /*clip: rect(0px, @circle-size/2, @circle-size, 0px);*/
+  clip: rect(0px, calc(var(--circle-size) / 2), var(--circle-size), 0px); /*clip: rect(0px, @circle-size/2, @circle-size, 0px);*/
   background-color: pink;
 }
 
 .circle-inset {
   background-color: white;
-  width: 80px;
-  height: 80px;
+  width: 40%;
+  height: 40%;
   position: relative;
-  top: 60px;
-  left: 60px;
+  top: 30%;
+  left: 30%;
   border-radius: 50%;
   box-shadow: 0px 0px 20px 4px rgba(216, 210, 210, 0.96);
   border: 1px solid rgba(136, 136, 136, 0.58);
 }
 .circle-inset .runner {
-  width: 80px;
-  height: 80px;
+  width: 100%;
+  height: 100%;
   background-image: url(player_b_right_walk1-0.2.gif);
   background-size: 80%;
-  background-position: 5px center;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
 .circle-inset .runner.paused {
   background-image: url(./person_pause_b.png);
   background-size: 80%;
-  background-position: 7px center;
+  background-position: center;
   background-repeat: no-repeat;
 }
 .circle-inset .contents {
@@ -232,7 +230,6 @@ a {
 }
 
 /* #### radial progressbar end #### */
-
 #MainPart_lbManualUpdateWarning {
   margin: 15px 0;
 }
