--- a/progressbar/radial/files/v01/radialprogress-Relevant_css.css
+++ b/progressbar/radial/files/v01/radialprogress-Relevant_css.css
@@ -1,10 +1,6 @@
 /* #### radial progressbar start #### */
-
 :root {
-  --circle-size: 92px;
-  --circle-inset-size-as-deciamal: 0.85;
-  --circle-inset-size: calc(var(--circle-size) * var(--circle-inset-size-as-deciamal));
-  --circle-inset-position: calc((var(--circle-size) - var(--circle-inset-size)) / 2);
+  --circle-size: 100px;
 }
 .progressbar {
   /*background-color: #581e00;
@@ -20,14 +16,15 @@
 }
 #MainPart_divProgressbar_Progress_Runner,
 #MainPart_divProgressbar_Progress_Runner.paused {
-  /* background-image: none; */
-  display: none;
+  background-image: none;
 }
+
+/* to change the size of the radial progressbar, change all of the @circle-size accordingly */
 
 .radial-progressbar {
   height: var(--circle-size); /*@circle-size */
   width: var(--circle-size); /*@circle-size */
-  margin: 5px 0;
+  margin: 5px auto;
   border-radius: 50%;
 }
 
@@ -39,9 +36,9 @@
   border-radius: 50%;
   position: absolute;
 }
-/* .circle .shadow {
-  box-shadow: 0px 0 40px 0px inset #d9f0e3;
-} */
+.circle .shadow {
+  box-shadow: 0px 0 40px 0px inset rgba(0, 0, 0, 0.2);
+}
 .circle .mask,
 .circle .fill {
   -webkit-backface-visibility: hidden;
@@ -55,33 +52,33 @@
 }
 .circle .mask .fill {
   clip: rect(0px, calc(var(--circle-size) / 2), var(--circle-size), 0px); /*clip: rect(0px, @circle-size/2, @circle-size, 0px);*/
-  background-color: var(--main-color);
+  background-color: pink;
 }
 
 .circle-inset {
   background-color: white;
-  width: var(--circle-inset-size);
-  height: var(--circle-inset-size);
+  width: 40%;
+  height: 40%;
   position: relative;
-  top: var(--circle-inset-position);
-  left: var(--circle-inset-position);
+  top: 30%;
+  left: 30%;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
+  box-shadow: 0px 0px 20px 4px rgba(216, 210, 210, 0.96);
+  border: 1px solid rgba(136, 136, 136, 0.58);
 }
 .circle-inset .runner {
-  width: 100%;
-  height: 100%;
+  width: 80px;
+  height: 80px;
   background-image: url(player_b_right_walk1-0.2.gif);
   background-size: 80%;
-  background-position: center;
+  background-position: 5px center;
   background-repeat: no-repeat;
 }
 
 .circle-inset .runner.paused {
   background-image: url(./person_pause_b.png);
   background-size: 80%;
-  background-position: center;
+  background-position: 7px center;
   background-repeat: no-repeat;
 }
 .circle-inset .contents {
