--- a/ConvertToLocalTime/relevantCSS.css
+++ b/ConvertToLocalTime/relevantCSS.css
@@ -13,3 +13,6 @@
 #MainPart_h2MessageOnQueueTicketTimeTextTimeZonePostfix {
   display: none;
 }
+#pConfirmRedirectTime > span {
+  display: none;
+}
